fixed app overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -307,7 +307,7 @@ footer .follow{
     opacity: 0.7;
 }
 .app-body{
-    position: fixed;
+    position: absolute;
     left: 0;
     max-width: 640px;
     min-width: 320px;
